[gd_scene load_steps=8 format=3 uid="uid://di03pj8g1i5fn"]

[ext_resource type="Script" path="res://prototype_ui/player_hud/player_hud.gd" id="1_288fp"]
[ext_resource type="PackedScene" uid="uid://bhqna0nc53y4b" path="res://prototype_ui/player_hud/lives/lives_hud.tscn" id="2_xshgd"]
[ext_resource type="PackedScene" uid="uid://cdtvh3fb8nebc" path="res://prototype_ui/player_hud/quickbar/quickbar.tscn" id="3_m74vd"]
[ext_resource type="Texture2D" uid="uid://6qefqpwr8rfe" path="res://prototype_ui/player_hud/back-button.png" id="3_yqerm"]
[ext_resource type="PackedScene" uid="uid://csqve737x2i4r" path="res://prototype_ui/player_hud/armor_image/armor_image.tscn" id="4_kjwgk"]
[ext_resource type="PackedScene" uid="uid://3bm8by82q253" path="res://prototype_ui/inventory_alchemy_view/score_label/score_label.tscn" id="5_i6go6"]
[ext_resource type="Texture2D" uid="uid://k0pd82rx6qn5" path="res://prototype_ui/inventory_alchemy_view/inventory_panel/inventory-icon.png" id="5_qdyld"]

[node name="PlayerHUD" type="CanvasLayer"]
script = ExtResource("1_288fp")
backpack_texture = ExtResource("5_qdyld")
return_texture = ExtResource("3_yqerm")

[node name="LivesHud" parent="." instance=ExtResource("2_xshgd")]
anchors_preset = 1
anchor_left = 1.0
anchor_bottom = 0.0
offset_left = -441.0
offset_top = 64.0
offset_right = -121.0
offset_bottom = 152.0
grow_horizontal = 0
grow_vertical = 1

[node name="Quickbar" parent="." instance=ExtResource("3_m74vd")]
anchors_preset = 2
anchor_top = 1.0
anchor_right = 0.0
offset_left = 129.0
offset_top = -184.0
offset_right = 1025.0
offset_bottom = -56.0
grow_horizontal = 1
grow_vertical = 0

[node name="ArmorImage" parent="." instance=ExtResource("4_kjwgk")]
unique_name_in_owner = true
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_right = 0.0
offset_left = 1032.0
offset_top = -176.0
offset_right = 1144.0
offset_bottom = -64.0
grow_horizontal = 1
grow_vertical = 0

[node name="InventoryButton" type="TextureButton" parent="."]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -256.0
offset_top = -180.0
offset_right = -130.0
offset_bottom = -60.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("5_qdyld")
texture_pressed = ExtResource("5_qdyld")
texture_hover = ExtResource("5_qdyld")
ignore_texture_size = true
stretch_mode = 0

[node name="ScoreLabel" parent="." instance=ExtResource("5_i6go6")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 122.0
offset_top = 64.0
offset_right = 317.0
offset_bottom = 146.0
grow_horizontal = 1
grow_vertical = 1
theme_override_font_sizes/font_size = 72
horizontal_alignment = 0

[connection signal="pressed" from="InventoryButton" to="." method="_on_inventory_button_pressed"]
